making swagger 'try it out' work
