# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/getResult/{year}/{trackId}": {
+        "/f1/api/getResult/{year}/{trackId}": {
             "get": {
                 "description": "Retrieves specific results for the specified year and track ID",
                 "consumes": [
@@ -70,7 +70,7 @@
                 }
             }
         },
-        "/getResults/{year}": {
+        "/f1/api/getResults/{year}": {
             "get": {
                 "description": "Retrieves specific results for the specified year",
                 "consumes": [
@@ -129,7 +129,7 @@
                 }
             }
         },
-        "/getTracks/{year}": {
+        "/f1/api/getTracks/{year}": {
             "get": {
                 "description": "Retrieves all tracks for the specified year",
                 "consumes": [
@@ -188,7 +188,7 @@
                 }
             }
         },
-        "/getTracks/{year}/{trackName}": {
+        "/f1/api/getTracks/{year}/{trackName}": {
             "get": {
                 "description": "Retrieves specific track for the specified year and track name",
                 "consumes": [
